<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- İngilis -->
    <string name="app_name">ABB mobile</string>
    <string name="earn_faydalı">Earn "Faydalı" cashback</string>
    <string name="spend_with_abb">Spend with ABB cards and\nearn Faydalı cashback</string>
    <string name="abb_customer">ABB Customer</string>
    <string name="not_an_abb_customer">Not an ABB Customer</string>
    <string name="swipe_for_menu">Swipe for menu</string>
    <string name="language">Language</string>
    <string name="service_network">Service Network</string>
    <string name="currency">Currency</string>
    <string name="faq">FAQ</string>
    <string name="contact_the_bank">Contact the bank</string>
    <string name="the_international_bank_of_azerbaijan_all_rights_reserved_nversion_9_11_0_build_630_live_mode">ⓒ The International Bank of Azerbaijan - All rights reserved\nVersion: 9.11.0 - Build: 630 - Live mode</string>
    <string name="call_us">Call us</string>
    <string name="you_have_to_be_over_18_to_register">You have to be over 18 to register</string>
    <string name="enter_your_date_of_birth">Enter your date of Birth</string>
    <string name="continues">Continue</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email">Email</string>
    <string name="fin_number">FIN number</string>
    <string name="you_can_enter_with_fin_number">You can enter with FIN number</string>
    <string name="you_can_enter_with_email">You can enter with email</string>
    <string name="use_fin_number">Use FIN number</string>
    <string name="password">Password</string>
    <string name="enter_abb_mobile">Enter ABB mobile</string>
    <string name="you_can_enter_with_email_or_fin_number">You can enter with email or FIN number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="more">More</string>
    <string name="for_you">For you</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="see_all">See all</string>
    <string name="_0_npending_edv">0 ₼\nPending EDV</string>
    <string name="_0_00_ncashback">0.00 ₼\nCashback</string>
    <string name="apply_now">Apply now</string>
    <string name="add_other_bank_s_card_nor_order_a_new_one">Add other bank`s card\nor order a new one</string>
    <string name="add_new_card">Add new card</string>
    <string name="investment">Investment 🔔</string>
    <string name="all_products">All products</string>
    <string name="insurance">Insurance</string>
    <string name="nice_to_see_you_again">Nice to see you again 😊</string>
    <string name="create_new">Create new</string>
    <string name="receiver">Receiver</string>
    <string name="enter_your_information">Enter your information</string>
    <string name="enter_your_personal_data_please">Enter your personal data please</string>
    <string name="options">Options</string>
    <string name="select_relevant_option">Select relevant option</string>
    <string name="order_new_card">Order new card</string>
    <string name="add_other_bank_s_card">Add other bank`s card</string>
    <string name="top_up">Top Up</string>
    <string name="pay">Pay</string>
    <string name="transfer">Transfer</string>
    <string name="you_don_t_have_any_auto_payment_or_template_yet">You don`t have any auto-payment or template yet</string>
    <string name="auto_payment_transfer_and_templates">Auto-payment/transfer and templates</string>
    <string name="no_transactions_yet">No transactions yet</string>
    <string name="lastest_transaction">Lastest transaction</string>
    <string name="order_a_card">Order a card</string>
    <string name="payments">Payments</string>
    <string name="search">Search</string>
    <string name="balance_growth">Balance growth</string>
    <string name="profile">Profile</string>
    <string name="mobile_number">Mobile number</string>
    <string name="personal_information">Personal information</string>
    <string name="log_out">Log out</string>
    <string name="sender">Sender</string>
    <string name="which_card_or_account_would_you_like_to_use_to_nsend_money">Which card or account would you like to use to\nsend money?</string>
    <string name="linked_cards">Linked cards</string>
    <string name="other_card">Other card</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="mobile">Mobile</string>
    <string name="which_card_or_account_would_you_like_to_use_to_naccept_money">Which card or account would you like to use to\naccept money?</string>
    <string name="cards">Cards</string>
    <string name="current_card_name">Current Card Name</string>
    <string name="price">Price</string>
    <string name="free">FREE</string>
    <string name="cash_withdrawal">Cash withdrawal</string>
    <string name="welcome_miles">Welcome Miles</string>
    <string name="tariff">Tariff</string>
    <string name="_3_azn_2_miles_0_6667">3 AZN = 2 MILES (0.6667)</string>
    <string name="between_my_cards_and_account">Between my cards and account</string>
    <string name="sender_ncard_ac">Sender \nCard/Ac..</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="add_mobile_number">Add mobile number</string>
    <string name="date">Date</string>
    <string name="press_and_hold_to_copy_card_number">Press and hold to copy card number</string>
    <string name="swipe_down_to_close">Swipe down to close</string>
    <string name="landline_number">Landline number</string>
    <string name="short_number">Short number</string>
    <string name="all_offers">All Offers</string>
    <string name="you_have_2_active_offers">You have 2 active offers</string>
    <string name="quot_faydal_quot_club">\"Faydalı\" club</string>
    <string name="tamkart_partners">TamKart partners</string>
    <string name="partner_services">Partner services</string>
    <string name="you_see_the_registered_mobile_number">You see the registered mobile number</string>
    <string name="special_offers_for_you">Special offers for you</string>
    <string name="online_services">Online services</string>
    <string name="randevu">Randevu</string>
    <string name="card_order">Card order</string>
    <string name="loan_order">Loan order</string>
    <string name="expenses">Expenses</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="see_more">See more</string>
    <string name="your_history_is_currently_empty">Your history is currently empty</string>
    <string name="to_other_card">To other card</string>
    <string name="with_number_to_card">With number to card</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="other_transfers">Other transfers</string>
    <string name="between_my_cards_and_accounts">Between my cards and accounts</string>
    <string name="are_you_sure_to_log_out_of_the_n_device">Are you sure to log out of the \n device?</string>
    <string name="when_you_exit_the_mobile_app_you_will_need_to_nregister_again">When you exit the mobile app, you will need to \nregister again.</string>
    <string name="cancel">Cancel</string>
    <string name="loading_card_order">Your card order is being processed..</string>
    <string name="loading_checking">Your information is being verified..</string>
    <string name="loading_preparing">Your card is being prepared</string>
    <string name="profile_and_parameters">Profile and parameters</string>
    <string name="bank_services">Bank Services</string>
    <string name="support">Support</string>
    <string name="documents">Documents</string>
    <string name="transaction_history">Transaction history</string>
    <string name="filter_direction">Direction</string>
    <string name="filter_period">Period</string>
    <string name="filter_type">Type</string>
    <string name="filter_cards">Cards</string>
    <string name="filter_calculation">Calculation</string>
    <string name="hello_user">Hello %1$s</string>
    <string name="app_language">Application Language</string>
    <string name="carbon_footprint">Carbon footprint</string>
    <string name="carbon_footprint_action">Activate</string>
    <string name="interface_mode">Interface mode</string>
    <string name="interface_mode_value">Light</string>
    <string name="application_language">Application language</string>
    <string name="application_language_value">English</string>
    <string name="notification_settings">Notification settings</string>
    <string name="notification_settings_value">6 notification types are active</string>
    <string name="application_icon">Application icon</string>
    <string name="stickers">Stickers</string>
    <string name="menu_profile">Profile and Parameters</string>
    <string name="menu_services">Bank Services</string>
    <string name="menu_support">Support</string>
    <string name="menu_documents">Documents</string>
    <string name="rate_us">Rate us</string>
    <string name="transfer_requests">Transfer requests</string>
    <string name="requests_transfers_and_split_the_bill">Requests, Transfers and Split the bill</string>
    <string name="easy_one_time_transfers">Easy one-time transfers</string>
    <string name="activate">Activate</string>
    <string name="products_and_operations">Products and operations</string>
    <string name="qr_and_my_personal_information">QR and my personal information</string>
    <string name="set_pin_code">Set PIN Code</string>
    <string name="confirm_pin_code">Confirm PIN Code</string>
    <string name="pin_mismatch">PINs don\'t match. Please try again.</string>
    <string name="pin_set_success">PIN code set successfully!</string>
</resources>